--- a/package.json
+++ b/package.json
@@ -1,16 +1,38 @@
 {
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "scripts": {
+    "build": "node ./scripts/buildAll",
+    "prettier-watch": "onchange '**/*.js' '**/*.json' -- prettier --write {{changed}}",
+    "test": "jest --projects ./packages/*/",
+    "lint": "eslint . --ignore-path .gitignore"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "singleQuote": true
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "devDependencies": {
     "@ampproject/rollup-plugin-closure-compiler": "^0.26.0",
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/plugin-transform-object-assign": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "@lets/wait": "^2.0.2",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "anyone": "^0.0.7",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
@@ -36,31 +58,9 @@
     "prettier": "2.1.2",
     "pretty-quick": "^3.0.2",
     "rollup": "^2.28.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.2",
     "typescript": "^4.0.3",
     "validator": "^13.1.17"
-  },
-  "scripts": {
-    "build": "node ./scripts/buildAll",
-    "prettier-watch": "onchange '**/*.js' '**/*.json' -- prettier --write {{changed}}",
-    "test": "jest --projects ./packages/*/",
-    "lint": "eslint . --ignore-path .gitignore"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
-  "prettier": {
-    "arrowParens": "avoid",
-    "singleQuote": true
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
