use context.bind

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/plugin-transform-object-assign": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "@lets/wait": "^2.0.2",
@@ -37,7 +38,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-plugin-add-module-exports": "^1.0.4",
-    "context": "^0.1.0",
+    "context": "^1.1.0",
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "eslint": "^7.10.0",
